--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,25 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
+  dio: ^5.4.0
+  retrofit: ^4.0.3
+  json_annotation: ^4.8.1
+  flutter_bloc: ^8.1.4
+  equatable: ^2.0.5
+  isar: ^3.1.0+1
+  isar_flutter_libs: any
+  get_it: ^7.6.4
+  cached_network_image: ^3.3.1
+  connectivity_plus: ^7.0.0
+  dartz: ^0.10.1
+  
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  retrofit_generator: ^8.0.4
+  json_serializable: ^6.8.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
