--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   cached_network_image: ^3.3.1
   connectivity_plus: ^7.0.0
   dartz: ^0.10.1
+  shimmer: ^3.0.0
   
 
 dev_dependencies:
